--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: #f4f4f4;
+    background-color: #000270;
     color: #333;
     display: flex;
     flex-direction: column;
@@ -22,12 +22,12 @@ header {
 
 header h1 {
     font-size: 2.5rem;
-    color: #333;
+    color: #ffffff;
 }
 
 header p {
     font-size: 1.2rem;
-    color: #555;
+    color: #ffffff;
     margin-bottom: 2rem;
 }
 
@@ -56,7 +56,7 @@ main {
 
 .project-card h2 {
     font-size: 1.8rem;
-    color: #0073e6;
+    color: #000270;
     margin-bottom: 0.5rem;
 }
 
@@ -76,7 +76,7 @@ main {
 }
 
 .project-link .button:hover {
-    background-color: #005bb5;
+    background-color: #000270;
 }
 
 footer {
