--- a/styles.css
+++ b/styles.css
@@ -33,8 +33,7 @@ header p {
 }
 
 main {
-    width: 90%;
-    max-width: 1000px;
+    width: 80%;
 }
 
 .projects {
@@ -49,7 +48,7 @@ main {
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 20px;
-  width: 90%;
+  width: 100%;
   overflow-wrap: break-word; 
   word-break: break-word; 
   transition: transform 0.3s ease;
@@ -138,8 +137,7 @@ footer a:hover {
   padding-top: 60px;
   text-align: left;
   color:  rgb(255, 255, 255);
-  padding: 20px;
-  width: 90%;
+  width: 100%;
 }
 
 .content > * {
@@ -154,3 +152,21 @@ footer a:hover {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 
+/* Video */
+
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%; 
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+}
+
+.video-container video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
