--- a/styles.css
+++ b/styles.css
@@ -155,18 +155,12 @@ footer a:hover {
 /* Video */
 
 .video-container {
-  position: relative;
-  padding-bottom: 56.25%; 
-  height: 0;
-  overflow: hidden;
   max-width: 100%;
+  aspect-ratio: 16 / 9;
 }
 
 .video-container video {
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
-  height: 100%;
-  object-fit: cover;
+  height: auto;
+  display: block;
 }
